--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Taskinator</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 
 <body>
@@ -15,11 +15,9 @@
     <h1 class="page-title">Taskinator</h1>
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
-      
       <div class="form-group">
         <input type="text" name="task-name" placeholder="Enter Task Name" />
       </div>
-
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
           <option value="" disabled selected>Pick a task type</option>
@@ -28,17 +26,29 @@
           <option value="Mobile">Mobile</option>
         </select>
       </div>
-
       <div class="form-group">
         <button class="btn" id="save-task" type="submit">Add Task</button>
       </div>
     </form>
   </header>
 
-  <main class="page-content">
+  <main class="page-content" id="page-content">
+    <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
       <ul class="task-list" id="tasks-to-do"></ul>
+    </section>
+
+    <!-- Tasks In Progress -->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Tasks In Progress</h2>
+      <ul class="task-list" id="tasks-in-progress"></ul>
+    </section>
+
+    <!-- Tasks Completed -->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Tasks Completed</h2>
+      <ul class="task-list" id="tasks-completed"></ul>
     </section>
   </main>
 
@@ -46,7 +56,7 @@
     &copy;2020 by Taskinator
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
