--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Taskinator</title>
+  <title>Task Master</title>
   <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 
 <body>
 
   <header>
-    <h1 class="page-title">Taskinator</h1>
+    <h1 class="page-title">Task master</h1>
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
       <div class="form-group">
@@ -20,7 +20,7 @@
       </div>
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
-          <option value="" disabled selected>Pick a task type</option>
+          <option value="" selected disabled>Pick a task type</option>
           <option value="Print">Print</option>
           <option value="Web">Web</option>
           <option value="Mobile">Mobile</option>
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    &copy;2020 by Taskinator
+    &copy;2021 by Task Master
   </footer>
 
   <script src="./script.js"></script>
